src/main/java/com/example/apptive19thhjfundbackend/_core/error/ex/Exception403.java
package com.example.apptive19thhjfundbackend._core.error.ex;

public class Exception403 extends RuntimeException{
    public Exception403(String msg) {
        super(msg);
    }
}
